Fixed cobertura analysis

--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ after_success:
     # ... installing the tools
     - sudo apt-get install -qq python-yaml lcov
     # ... changing data format to a readable one
-    - lcov --directory $COVERALS_DIR --base-directory ./test --capture --output-file $COVERALS_DIR/coverage.info
+    - lcov --directory $COVERALS_DIR --base-directory /home/travis/build/mat007/turtle/test --capture --output-file $COVERALS_DIR/coverage.info
 
     # ... erasing /test/ /example/ folder data
     - lcov --remove $COVERALS_DIR/coverage.info "/usr*" "/test/*" $IGNORE_COVERAGE "tests/*" "*/doc/examples/*" -o $COVERALS_DIR/coverage.info
