--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,15 @@ os:
     - linux
 
 env:
-    - CXX_STANDARD=c++98
-    - CXX_STANDARD=c++0x
+    - CXX_STANDARD=c++98 BRANCH_TO_TEST=boost-1.56.0
+    - CXX_STANDARD=c++0x BRANCH_TO_TEST=boost-1.56.0
+    - CXX_STANDARD=c++98 BRANCH_TO_TEST=master
+    - CXX_STANDARD=c++0x BRANCH_TO_TEST=master
 
 before_install:
     # Set this to the name of your Boost library
     # Autodetect library name by using the following code: - PROJECT_TO_TEST=$(basename $(pwd))
     - PROJECT_TO_TEST=$(basename $(pwd))
-
-    # Autodetect Boost branch by using the following code: - BRANCH_TO_TEST=`git rev-parse --abbrev-ref HEAD`
-    # or by - BRANCH_TO_TEST=$TRAVIS_BRANCH or just directly specify it
-    - BRANCH_TO_TEST=master
 
     # Files, which coverage results must be ignored (files from other projects). Example: - IGNORE_COVERAGE='*/boost/progress.hpp */filesystem/src/path.cpp'
     - IGNORE_COVERAGE='*/boost-local/*'
@@ -31,20 +29,11 @@ before_install:
     # From this point and below code is same for all the Boost libs
     # Cloning Boost libraries (fast nondeep cloning)
     - PROJECT_DIR=`pwd`
-    - BOOST=$HOME/boost-local
-    - git init $BOOST
+    - git --version
+    - BOOST=$HOME/boost
+    - git clone -b $BRANCH_TO_TEST https://github.com/boostorg/boost.git $BOOST
     - cd $BOOST
-    - git remote add --no-tags -t $BRANCH_TO_TEST origin https://github.com/boostorg/boost.git
-    - git fetch --depth=1
-    - git checkout $BRANCH_TO_TEST
     - git submodule update --init --merge
-    - git remote set-branches --add origin $BRANCH_TO_TEST
-    - git pull --recurse-submodules
-    - git submodule update --init
-    - git checkout $BRANCH_TO_TEST
-    - git submodule foreach "git reset --quiet --hard; git clean -fxd"
-    - git reset --hard; git clean -fxd
-    - git status
     - ./bootstrap.sh
     - ./b2 headers
     - sudo apt-get install -qq xsltproc
