--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,10 @@ os:
 env:
     - CXX_STANDARD=c++98 BRANCH_TO_TEST=boost-1.56.0
     - CXX_STANDARD=c++0x BRANCH_TO_TEST=boost-1.56.0
+    - CXX_STANDARD=c++98 BRANCH_TO_TEST=boost-1.58.0
+    - CXX_STANDARD=c++0x BRANCH_TO_TEST=boost-1.58.0
+    - CXX_STANDARD=c++98 BRANCH_TO_TEST=boost-1.59.0
+    - CXX_STANDARD=c++0x BRANCH_TO_TEST=boost-1.59.0
     - CXX_STANDARD=c++98 BRANCH_TO_TEST=master
     - CXX_STANDARD=c++0x BRANCH_TO_TEST=master
 
