Updated c++ versions to check against

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,14 @@ os:
     - linux
 
 env:
-    - CXX_STANDARD=c++98 BRANCH_TO_TEST=boost-1.56.0
-    - CXX_STANDARD=c++0x BRANCH_TO_TEST=boost-1.56.0
     - CXX_STANDARD=c++98 BRANCH_TO_TEST=boost-1.58.0
-    - CXX_STANDARD=c++0x BRANCH_TO_TEST=boost-1.58.0
+    - CXX_STANDARD=c++11 BRANCH_TO_TEST=boost-1.58.0
     - CXX_STANDARD=c++98 BRANCH_TO_TEST=boost-1.59.0
-    - CXX_STANDARD=c++0x BRANCH_TO_TEST=boost-1.59.0
+    - CXX_STANDARD=c++11 BRANCH_TO_TEST=boost-1.59.0
     - CXX_STANDARD=c++98 BRANCH_TO_TEST=master
-    - CXX_STANDARD=c++0x BRANCH_TO_TEST=master
+    - CXX_STANDARD=c++11 BRANCH_TO_TEST=master
+    - CXX_STANDARD=c++14 BRANCH_TO_TEST=master
+    - CXX_STANDARD=c++17 BRANCH_TO_TEST=master
 
 addons:
   apt:
