--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,7 @@
 #
 # Copyright Mathieu Champlon 2015.
 
+skip_branch_with_pr: true
 
 environment:
   matrix:
@@ -23,8 +24,7 @@ configuration:
   - release
 
 install:
-  - mkdir C:\xsltproc
-  - cd C:\xsltproc
+  - cd C:\projects\turtle\doc
   - ps: Invoke-WebRequest ftp://ftp.zlatkovic.com/libxml/iconv-1.9.2.win32.zip -OutFile iconv.zip
   - 7z e iconv.zip iconv.dll -r
   - ps: Invoke-WebRequest ftp://ftp.zlatkovic.com/libxml/libxml2-2.7.8.win32.zip -OutFile libxml2.zip
@@ -33,8 +33,7 @@ install:
   - 7z e libxslt.zip libexslt.dll libxslt.dll xsltproc.exe -r
   - ps: Invoke-WebRequest ftp://ftp.zlatkovic.com/libxml/zlib-1.2.5.win32.zip -OutFile zlib.zip
   - 7z e zlib.zip zlib1.dll -r
-  - set PATH=%PATH%;%CD%
-  - xsltproc --version
+  - xsltproc -V
 
 build_script:
   - cd %BOOST_ROOT%
