--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,11 +9,16 @@ skip_branch_with_pr: true
 environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-      BOOST_ROOT: C:\Libraries\boost_1_59_0
+      BOOST: 1_59_0
       TOOLSET: msvc-14.0
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      BOOST_ROOT: C:\Libraries\boost_1_65_1
+      BOOST: 1_65_1
       TOOLSET: msvc-14.1
+      CXX_STANDARD: 14
+    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    #   BOOST: 1_65_1
+    #   TOOLSET: msvc-14.1
+    #   CXX_STANDARD: 17
 
 platform:
   - 32
@@ -36,7 +41,9 @@ install:
   - xsltproc -V
 
 build_script:
+  - set BOOST_ROOT=C:\Libraries\boost_%BOOST%
   - cd %BOOST_ROOT%
   - call bootstrap.bat
   - cd C:\projects\turtle\build
-  - call build.bat --toolset=%TOOLSET% address-model=%PLATFORM% --build-type=complete %CONFIGURATION%
+  - if NOT "%CXX_STANDARD%"=="" set CXX_FLAGS=cxxflags=/std:c++%CXX_STANDARD%
+  - call build.bat --toolset=%TOOLSET% address-model=%PLATFORM% %CXX_FLAGS% --build-type=complete %CONFIGURATION%
