--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,10 +19,11 @@ environment:
       BOOST: 1_65_1
       TOOLSET: msvc-14.1
       CXX_STANDARD: 14
-    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    #   BOOST: 1_67_0
-    #   TOOLSET: msvc-14.1
-    #   CXX_STANDARD: 17
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      BOOST: 1_67_0
+      TOOLSET: msvc-14.1
+      CXX_STANDARD: 14
+      # CXX_STANDARD: 17
 
 platform:
   - 32
