--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ env:
     - CXX_STANDARD=c++98 BRANCH_TO_TEST=boost-1.59.0
     - CXX_STANDARD=c++11 BRANCH_TO_TEST=boost-1.67.0
     - CXX_STANDARD=c++98 BRANCH_TO_TEST=boost-1.67.0
+    - CXX_STANDARD=c++17 BRANCH_TO_TEST=boost-1.70.0
 
 compiler:
   - clang
