Parallel build on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -74,12 +74,12 @@ script:
     - cd $PROJECT_DIR/build
     - export BOOST_ROOT=$BOOST
     # `--coverage` flags required to generate coverage info for Coveralls
-    - ./build.sh --toolset=$CC "cxxflags=-std=$CXX_STANDARD -Wno-unused-local-typedefs -Wno-unused-function -Wno-deprecated-declarations --coverage" "linkflags=--coverage"
+    - ./build.sh --toolset=$CC "cxxflags=-std=$CXX_STANDARD -Wno-unused-local-typedefs -Wno-unused-function -Wno-deprecated-declarations --coverage" "linkflags=--coverage" -j3
     - cd $BOOST && ./b2 --with-test --with-thread --with-chrono --with-system --with-atomic --with-date_time -a -j3 # Build required libs
     - mkdir $PROJECT_DIR/__build && cd $PROJECT_DIR/__build
-    - export CXXFLAGS="-std=$CXX_STANDARD -Wall -Wextra"
+    - export CXXFLAGS="-std=$CXX_STANDARD"
     - cmake .. -DCMAKE_BUILD_TYPE=Debug
-    - cmake --build . --config Debug
+    - cmake --build . --config Debug -- -j3
     - ctest --output-on-failure --build-config Debug
 
 after_success:
