--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,11 @@ branches:
     - master
 
 env:
-    - CXX_STANDARD=c++17 BRANCH_TO_TEST=master
-    - CXX_STANDARD=c++14 BRANCH_TO_TEST=master
-    - CXX_STANDARD=c++14 BRANCH_TO_TEST=boost-1.58.0
-    - CXX_STANDARD=c++14 BRANCH_TO_TEST=boost-1.59.0
-    - CXX_STANDARD=c++14 BRANCH_TO_TEST=boost-1.67.0
+    - CXX_STANDARD=17 BRANCH_TO_TEST=master
+    - CXX_STANDARD=14 BRANCH_TO_TEST=master
+    - CXX_STANDARD=14 BRANCH_TO_TEST=boost-1.58.0
+    - CXX_STANDARD=14 BRANCH_TO_TEST=boost-1.59.0
+    - CXX_STANDARD=14 BRANCH_TO_TEST=boost-1.67.0
 
 compiler:
   - clang
@@ -59,21 +59,21 @@ before_install:
     - PROJECT_DIR=`pwd`
     - git --version
     - BOOST=$HOME/boost-local
-    - git clone -b $BRANCH_TO_TEST https://github.com/boostorg/boost.git $BOOST
+    - git clone -b $BRANCH_TO_TEST --depth 1 https://github.com/boostorg/boost.git $BOOST
     - cd $BOOST
-    - git submodule update --init --merge
+    - git submodule update --init --depth 1
     - ./bootstrap.sh
     - ./b2 headers
 
 script:
-    - cd $PROJECT_DIR/build
+    - cd $PROJECT_DIR
     - export BOOST_ROOT=$BOOST
     # `--coverage` flags required to generate coverage info for Coveralls
-    - ./build.sh --toolset=$CC "cxxflags=-std=$CXX_STANDARD -Wno-unused-local-typedefs -Wno-unused-function -Wno-deprecated-declarations --coverage" "linkflags=--coverage" -j3
+    - build/build.sh --toolset=$CC "cxxflags=-std=c++$CXX_STANDARD -Wno-unused-local-typedefs -Wno-unused-function -Wno-deprecated-declarations --coverage" "linkflags=--coverage" -j3
+    # CMake build
     - cd $BOOST && ./b2 --with-test --with-thread --with-chrono --with-system --with-atomic --with-date_time -a -j3 # Build required libs
     - mkdir $PROJECT_DIR/__build && cd $PROJECT_DIR/__build
-    - export CXXFLAGS="-std=$CXX_STANDARD"
-    - cmake .. -DCMAKE_BUILD_TYPE=Debug
+    - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-std=c++$CXX_STANDARD"
     - cmake --build . --config Debug -- -j3
     - ctest --output-on-failure --build-config Debug
 
