Don't error when TURTLE_AUTO_PTR=ON

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,6 +21,10 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang"
     target_compile_options(TurtleTestMain INTERFACE -Wno-unused-function)
   endif()
   if(TURTLE_WERROR)
+    check_cxx_compiler_flag(-Wdeprecated-declarations TURTLE_CXX_DEPRECATED_DECLARATIONS)
+    if(TURTLE_CXX_DEPRECATED_DECLARATIONS)
+      target_compile_options(TurtleTestMain INTERFACE -Wno-error=deprecated-declarations)
+    endif()
     target_compile_options(TurtleTestMain INTERFACE -Werror)
   endif()
 elseif(MSVC)
