Clean and remove build directory
Move scripts into scripts folder
Move doc-stuff into docs
Update CI & CMake scripts

See #89

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,10 +71,10 @@ script:
     - cd $PROJECT_DIR
     - export BOOST_ROOT=$BOOST
     # `--coverage` flags required to generate coverage info for Coveralls
-    - build/build.sh --toolset=$CC "cxxflags=-std=c++$CXX_STANDARD -Wno-unused-local-typedefs -Wno-unused-function -Wno-deprecated-declarations --coverage" "linkflags=--coverage" -j3
+    - scripts/build.sh --toolset=$CC "cxxflags=-std=c++$CXX_STANDARD -Wno-unused-local-typedefs -Wno-unused-function -Wno-deprecated-declarations --coverage" "linkflags=--coverage" -j3
     # CMake build
     - cd $BOOST && ./b2 --with-test --with-thread --with-chrono --with-system --with-atomic --with-date_time -a -j3 # Build required libs
-    - mkdir $PROJECT_DIR/__build && cd $PROJECT_DIR/__build
+    - mkdir $PROJECT_DIR/build && cd $PROJECT_DIR/build
     - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_FLAGS="-std=c++$CXX_STANDARD"
     - cmake --build . --config Debug -- -j3
     - ctest --output-on-failure --build-config Debug
