--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,10 +64,12 @@ jobs:
         run: |
             export DEBIAN_FRONTEND=noninteractive
             apt-get -o Acquire::Retries=$NET_RETRY_COUNT update
-            apt-get -o Acquire::Retries=$NET_RETRY_COUNT install -y sudo software-properties-common curl
-            # Need (newer) git, and the older Ubuntu container may require requesting the key manually using port 80
+            apt-get -o Acquire::Retries=$NET_RETRY_COUNT install -y sudo software-properties-common curl lsb-release
+            # Need (newer) git & cmake, and the older Ubuntu container may require requesting the key manually using port 80
             curl -sSL --retry ${NET_RETRY_COUNT:-5} 'http://keyserver.ubuntu.com/pks/lookup?op=get&search=0xE1DD270288B4E6030699E45FA1715D88E1DF1F24' | sudo gpg --dearmor > /etc/apt/trusted.gpg.d/git-core_ubuntu_ppa.gpg
             for i in {1..${NET_RETRY_COUNT:-5}}; do sudo -E add-apt-repository -y ppa:git-core/ppa && break || sleep 10; done
+            curl -sSL --retry ${NET_RETRY_COUNT:-5} 'https://apt.kitware.com/keys/kitware-archive-latest.asc' | sudo gpg --dearmor > /etc/apt/trusted.gpg.d/kitware-archive-latest.gpg
+            for i in {1..${NET_RETRY_COUNT:-5}}; do sudo -E add-apt-repository -y "deb https://apt.kitware.com/ubuntu/ $(lsb_release -cs) main" && break || sleep 10; done
             apt-get -o Acquire::Retries=$NET_RETRY_COUNT update
             apt-get -o Acquire::Retries=$NET_RETRY_COUNT install -y g++ git cmake
             git config --global pack.threads 0
