CMake: Disable Clang warning `inconsistent-missing-override`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,9 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang"
   if(TURTLE_CXX_UNUSED_FUNCTION)
     target_compile_options(TurtleTestMain INTERFACE -Wno-unused-function)
   endif()
+  if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    target_compile_options(TurtleTestMain INTERFACE -Wno-inconsistent-missing-override)
+  endif()
   if(TURTLE_WERROR)
     check_cxx_compiler_flag(-Wdeprecated-declarations TURTLE_CXX_DEPRECATED_DECLARATIONS)
     if(TURTLE_CXX_DEPRECATED_DECLARATIONS)
