--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
             apt-get -o Acquire::Retries=$NET_RETRY_COUNT update
             apt-get -o Acquire::Retries=$NET_RETRY_COUNT install -y g++ git cmake
             git config --global pack.threads 0
+            git config --global --add safe.directory "$GITHUB_WORKSPACE"  # Avoid ownership issues of repo in container
 
       - uses: actions/checkout@v4
         with:
