--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,8 @@
 # subject to the Boost Software License, Version 1.0. (See accompanying
 # file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
 #
-# Copyright Mathieu Champlon 2015.
-# Copyright Alexander Grund 2020.
+# Copyright 2015 Mathieu Champlon
+# Copyright 2020-2025 Alexander Grund
 
 skip_branch_with_pr: true
 
@@ -19,17 +19,29 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       BOOST: 1_65_1
       TOOLSET: msvc-14.1
-      CXX_STANDARD: 14
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      BOOST: 1_67_0
+      BOOST: 1_69_0
       TOOLSET: msvc-14.1
-      CXX_STANDARD: 14
-      # CXX_STANDARD: 17
+      CXX_STANDARD: 14,17
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      BOOST: 1_83_0
+      TOOLSET: msvc-14.3
+      CXX_STANDARD: 14,17,20
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      BOOST: 1_86_0
+      TOOLSET: msvc-14.3
+      CXX_STANDARD: 14,17,20
+
+    # CMake builds
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       BOOST: 1_65_1
       CMAKE: true
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       BOOST: 1_83_0
+      CMAKE: true
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      BOOST: 1_86_0
       CMAKE: true
 
 install:
@@ -55,7 +67,7 @@ build_script:
   - cd %BOOST_ROOT%
   - call bootstrap.bat
   - cd %APPVEYOR_BUILD_FOLDER%
-  - if NOT "%CXX_STANDARD%"=="" set CXX_FLAGS=cxxflags=/std:c++%CXX_STANDARD%
+  - if NOT "%CXX_STANDARD%"=="" set CXX_FLAGS=cxxstd=%CXX_STANDARD%
   - set BUILD_ARGS=address-model=32,64 variant=debug,release
   - call scripts\build.bat --toolset=%TOOLSET% %CXX_FLAGS% -j3
 
