--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,10 @@ branches:
     - main
 
 environment:
+  global:
+    ADDRESS_MODEL: 32,64
+    VARIANT: debug,release
+
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
       BOOST: 1_65_1
@@ -23,15 +27,24 @@ environment:
       BOOST: 1_69_0
       TOOLSET: msvc-14.1
       CXX_STANDARD: 14,17
-
+      ADDRESS_MODEL: 64
+      VARIANT: debug
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
       BOOST: 1_83_0
       TOOLSET: msvc-14.3
       CXX_STANDARD: 14,17,20
+      ADDRESS_MODEL: 64
+      VARIANT: debug
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
       BOOST: 1_86_0
       TOOLSET: msvc-14.3
-      CXX_STANDARD: 14,17,20
+      CXX_STANDARD: 14,17
+      ADDRESS_MODEL: 64
+      VARIANT: debug
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2022
+      BOOST: 1_86_0
+      TOOLSET: msvc-14.3
+      CXX_STANDARD: 20
 
     # CMake builds
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
@@ -68,7 +81,7 @@ build_script:
   - call bootstrap.bat
   - cd %APPVEYOR_BUILD_FOLDER%
   - if NOT "%CXX_STANDARD%"=="" set CXX_FLAGS=cxxstd=%CXX_STANDARD%
-  - set BUILD_ARGS=address-model=32,64 variant=debug,release
+  - set BUILD_ARGS=address-model=%ADDRESS_MODEL% variant=%VARIANT%
   - call scripts\build.bat --toolset=%TOOLSET% %CXX_FLAGS% -j3
 
 for:
